Switching to gradle-wrapper commands

--- a/docs/exercises/slides/gradle/gradle.tex
+++ b/docs/exercises/slides/gradle/gradle.tex
@@ -161,15 +161,15 @@ dependencies {
 	\begin{itemize}
 		\item Projekt bauen
 		\begin{itemize}
-			\item \texttt{gradle build}
+			\item \texttt{./gradlew build}
 		\end{itemize}
 		\item Tests ausführen
 		\begin{itemize}
-			\item \texttt{gradle test}
+			\item \texttt{./gradlew test}
 		\end{itemize}
 		\item Projekt bauen und ausführen
 		\begin{itemize}
-			\item \texttt{gradle run}
+			\item \texttt{./gradlew run}
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -178,10 +178,10 @@ dependencies {
 	\begin{itemize}
 		\item \sout{Vorgeschlagene Ordnerstruktur}
 		\item \sout{Dependency Management}
-		\item \sout{Gradle Wrapper}
+		\item Gradle Wrapper
 		\item Mehrere Subprojekte, jedes hat ein eigenes build.gradle file
 		\item Gradle wird zum builden verwendet und nicht / nur halb fürs dependency management
-		\item 'gradle runApp' zum starten
+		\item './gradlew runApp' zum starten
 	\end{itemize}
 \end{frame}
 \end{document}
